✨ Boton de añadir al carrito y header responsive
Boton de añadir item al carrito estilado y se colocaron los elementos del header de manera responsive con el boton del carrito fixed.

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -16,3 +16,17 @@ header {
     width: 35px;
   }
 }
+@media (max-width: 769px) {
+  header {
+    justify-content: center;
+    div {
+      z-index: 2;
+      position: fixed;
+      bottom: 5px;
+      right: 5px;
+      padding: 10px;
+      background-color: $dark-red;
+      border-radius: 50%;
+    }
+  }
+}
