--- a/src/styles/components/Pizzas.scss
+++ b/src/styles/components/Pizzas.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   .pizza {
+    position: relative;
     display: flex;
     // flex-direction: column;
     flex-wrap: wrap;
@@ -36,6 +37,20 @@
     img {
       width: 100%;
       border-radius: 8px;
+    }
+    button {
+      position: absolute;
+      bottom: 5px;
+      right: 5px;
+      width: 35px;
+      height: 35px;
+      font-size: 4rem;
+      line-height: 3rem;
+      font-weight: 700;
+      color: $red;
+      border: none;
+      background-color: $yellow;
+      border-radius: 50%;
     }
   }
 }
