--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -22,6 +22,9 @@ header {
     div {
       z-index: 2;
       position: fixed;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       bottom: 5px;
       right: 5px;
       padding: 10px;
