--- a/src/styles/components/Pizzas.scss
+++ b/src/styles/components/Pizzas.scss
@@ -16,6 +16,7 @@
     background-color: $white;
     border-radius: 8px;
     padding: 7px;
+    box-shadow: 0px 4px 4px black;
     p {
       margin: 3px 0px 3px 0px;
     }
