--- a/src/styles/components/ShoppingCart.scss
+++ b/src/styles/components/ShoppingCart.scss
@@ -30,6 +30,19 @@ aside {
       font-weight: 700;
       color: white;
     }
+    .cantidad {
+      display: flex;
+      button {
+        background-color: $orange;
+        width: 20px;
+        height: 20px;
+        color: white;
+        font-size: 1.8rem;
+        line-height: 1.8rem;
+        margin: 0px 0px 0px 5px;
+      }
+    }
+
     input {
       justify-self: flex-start;
       width: 40px;
