--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -15,6 +15,26 @@ header {
   img {
     width: 35px;
   }
+  div {
+    position: relative;
+    a {
+      text-decoration: none;
+      .cart-q {
+        position: absolute;
+        right: -2px;
+        top: -2px;
+        width: 15px;
+        height: 15px;
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+        font-weight: 600;
+        text-align: center;
+        border-radius: 30px;
+        color: $dark-red;
+        background-color: $orange;
+      }
+    }
+  }
 }
 @media (max-width: 769px) {
   header {
