--- a/src/styles/components/Pizzas.scss
+++ b/src/styles/components/Pizzas.scss
@@ -11,7 +11,7 @@
     // flex-direction: column;
     flex-wrap: wrap;
     margin: 10px;
-    width: 300px;
+    max-width: 300px;
     height: 320px;
     background-color: $white;
     border-radius: 8px;
