--- a/src/styles/components/Pizzas.scss
+++ b/src/styles/components/Pizzas.scss
@@ -8,7 +8,6 @@
   .pizza {
     position: relative;
     display: flex;
-    // flex-direction: column;
     flex-wrap: wrap;
     margin: 10px;
     max-width: 300px;
@@ -40,6 +39,7 @@
       border-radius: 8px;
     }
     button {
+      cursor: pointer;
       position: absolute;
       bottom: 5px;
       right: 5px;
@@ -52,6 +52,9 @@
       border: none;
       background-color: $yellow;
       border-radius: 50%;
+      &:hover {
+        transform: scale(1.01);
+      }
     }
   }
 }
