--- a/src/styles/components/Pizzas.scss
+++ b/src/styles/components/Pizzas.scss
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
     margin: 10px;
     max-width: 300px;
-    height: 320px;
+    min-height: 320px;
     background-color: $white;
     border-radius: 8px;
     padding: 7px;
@@ -56,5 +56,11 @@
         transform: scale(1.01);
       }
     }
+  }
+}
+@media (max-width: 600px) {
+  .pizzas-container {
+    width: 100%;
+    flex-direction: column;
   }
 }
